Imprimindo com pprint( )

--- a/Built_in_Functions/Built-in.ipynb
+++ b/Built_in_Functions/Built-in.ipynb
@@ -1,45 +1,21 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.5"
-  },
-  "orig_nbformat": 4,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.5  ('venv': venv)"
-  },
-  "interpreter": {
-   "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
-   "source": [
-    "<h1><font color=#32CD32>Built in Functions</font></h1>"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **Built in Functions**"
+   ]
   },
   {
-   "source": [
-    "<h2><font color=#00BFFF>bool()</font></h2>\n",
-    "Valores vazios ou zeros são considerado False, do contrário são considerados True (Truth Value Testing).\n",
-    "\n",
-    "\"Truth Value Testing\". Isto é, decidir quando um valor é considerado True ou False"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **bool()**\r\n",
+    "Valores vazios ou zeros são considerado False, do contrário são considerados True (Truth Value Testing).\r\n",
+    "\r\n",
+    "\"Truth Value Testing\". Isto é, decidir quando um valor é considerado True ou False"
+   ]
   },
   {
    "cell_type": "code",
@@ -47,10 +23,17 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "False\nFalse\nFalse\nTrue\nTrue\nTrue\nTrue\nTrue\n"
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
      ]
     }
    ],
@@ -66,11 +49,11 @@
    ]
   },
   {
-   "source": [
-    "<h2><font color=#00BFFF>f'' / .format()</font></h2>"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **f'' / .format()**"
+   ]
   },
   {
    "cell_type": "code",
@@ -78,10 +61,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "----> Hello World! <----\n----> Hello World! <----\n"
+      "----> Hello World! <----\n",
+      "----> Hello World! <----\n"
      ]
     }
    ],
@@ -100,10 +84,15 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "O José tem 23 anos e ganha R$987.30.\nO --------José-------- tem 23 anos e ganha R$987.30.\nO José---------------- tem 23 anos e ganha R$987.30.\nO ----------------José tem 23 anos e ganha R$987.30.\nO José tem 23 anos e ganha R$987.30.\nO José tem 23 anos.\n"
+      "O José tem 23 anos e ganha R$987.30.\n",
+      "O --------José-------- tem 23 anos e ganha R$987.30.\n",
+      "O José---------------- tem 23 anos e ganha R$987.30.\n",
+      "O ----------------José tem 23 anos e ganha R$987.30.\n",
+      "O José tem 23 anos e ganha R$987.30.\n",
+      "O José tem 23 anos.\n"
      ]
     }
    ],
@@ -125,10 +114,20 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "--------------120.00\n-------10.10--------\nR$120.00\nR$120.00\nR$ 120.00\nR$  120.00\nR$00120.00\nR$00120.0000\nR$0000000120\nR$0120\nR$ 120\n"
+      "--------------120.00\n",
+      "-------10.10--------\n",
+      "R$120.00\n",
+      "R$120.00\n",
+      "R$ 120.00\n",
+      "R$  120.00\n",
+      "R$00120.00\n",
+      "R$00120.0000\n",
+      "R$0000000120\n",
+      "R$0120\n",
+      "R$ 120\n"
      ]
     }
    ],
@@ -155,10 +154,15 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "n1 =    100\nn1 = 000100\nn2 = 000001\nn2 =      1\nn3 = 00.758\nn4 = 15.770 ou 15.77\n"
+      "n1 =    100\n",
+      "n1 = 000100\n",
+      "n2 = 000001\n",
+      "n2 =      1\n",
+      "n3 = 00.758\n",
+      "n4 = 15.770 ou 15.77\n"
      ]
     }
    ],
@@ -178,10 +182,29 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "O 0º valor recebido é \t R$1000,00\nAgora sem o tab\nO 0º valor recebido é R$1000,00\n-----------------------------------\nO 1º valor recebido é \t R$1000,00\nAgora sem o tab\nO 1º valor recebido é R$1000,00\n-----------------------------------\nO 2º valor recebido é \t R$1000,00\nAgora sem o tab\nO 2º valor recebido é R$1000,00\n-----------------------------------\nO 3º valor recebido é \t R$1000,00\nAgora sem o tab\nO 3º valor recebido é R$1000,00\n-----------------------------------\nO 4º valor recebido é \t R$1000,00\nAgora sem o tab\nO 4º valor recebido é R$1000,00\n-----------------------------------\n"
+      "O 0º valor recebido é \t R$1000,00\n",
+      "Agora sem o tab\n",
+      "O 0º valor recebido é R$1000,00\n",
+      "-----------------------------------\n",
+      "O 1º valor recebido é \t R$1000,00\n",
+      "Agora sem o tab\n",
+      "O 1º valor recebido é R$1000,00\n",
+      "-----------------------------------\n",
+      "O 2º valor recebido é \t R$1000,00\n",
+      "Agora sem o tab\n",
+      "O 2º valor recebido é R$1000,00\n",
+      "-----------------------------------\n",
+      "O 3º valor recebido é \t R$1000,00\n",
+      "Agora sem o tab\n",
+      "O 3º valor recebido é R$1000,00\n",
+      "-----------------------------------\n",
+      "O 4º valor recebido é \t R$1000,00\n",
+      "Agora sem o tab\n",
+      "O 4º valor recebido é R$1000,00\n",
+      "-----------------------------------\n"
      ]
     }
    ],
@@ -195,11 +218,11 @@
    ]
   },
   {
-   "source": [
-    "<h2><font color=#00BFFF>.find() .rfind</font></h2>"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **.find() .rfind**"
+   ]
   },
   {
    "cell_type": "code",
@@ -207,10 +230,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "2\nA letra \"o\" aparece a ultima vez na posição 22.\n"
+      "2\n",
+      "A letra \"o\" aparece a ultima vez na posição 22.\n"
      ]
     }
    ],
@@ -221,23 +245,23 @@
    ]
   },
   {
-   "source": [
-    "<h2><font color=#00BFFF>print()</font></h2>\n",
-    "value é o valor que queremos imprimir, as reticências indicam que a função pode receber mais de um valor, basta separá-los por vírgula.\n",
-    "\n",
-    "sep é o separador entre os valores, por padrão o separador é um espaço em branco.\n",
-    "\n",
-    "end é o que acontecerá ao final da função, por padrão há uma quebra de linha, uma nova linha (\\n). "
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **print()**\r\n",
+    "value é o valor que queremos imprimir, as reticências indicam que a função pode receber mais de um valor, basta separá-los por vírgula.\r\n",
+    "\r\n",
+    "sep é o separador entre os valores, por padrão o separador é um espaço em branco.\r\n",
+    "\r\n",
+    "end é o que acontecerá ao final da função, por padrão há uma quebra de linha, uma nova linha (\\n). "
+   ]
   },
   {
-   "source": [
-    "<h3><font color=#DAA520>fomatando o print</font></h3>"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## fomatando o print"
+   ]
   },
   {
    "cell_type": "code",
@@ -245,10 +269,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Prazer em te conhecer\nLivio Alvarenga!\nPrazer em te conhecer Livio Alvarenga     !\nPrazer em te conhecer      Livio Alvarenga!\nPrazer em te conhecer Livio Alvarenga     !\nPrazer em te conhecer   Livio Alvarenga   !\nPrazer em te conhecer ===Livio Alvarenga===!\n"
+      "Prazer em te conhecer\n",
+      "Livio Alvarenga!\n",
+      "Prazer em te conhecer Livio Alvarenga     !\n",
+      "Prazer em te conhecer      Livio Alvarenga!\n",
+      "Prazer em te conhecer Livio Alvarenga     !\n",
+      "Prazer em te conhecer   Livio Alvarenga   !\n",
+      "Prazer em te conhecer ===Livio Alvarenga===!\n"
      ]
     }
    ],
@@ -268,10 +298,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "-------FIM DO PROGRAMA--------\n       FIM DO PROGRAMA        \n"
+      "-------FIM DO PROGRAMA--------\n",
+      "       FIM DO PROGRAMA        \n"
      ]
     }
    ],
@@ -286,10 +317,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "u\n  C\nurso em Vídeo Python  \n Croe\nimprimindo um texto longo!!! imprimindo um texto longo!!!\nimprimindo um texto longo!!! imprimindo um texto longo!!!\nimprimindo um texto longo!!! imprimindo um texto longo!!!\n"
+      "u\n",
+      "  C\n",
+      "urso em Vídeo Python  \n",
+      " Croe\n",
+      "imprimindo um texto longo!!! imprimindo um texto longo!!!\n",
+      "imprimindo um texto longo!!! imprimindo um texto longo!!!\n",
+      "imprimindo um texto longo!!! imprimindo um texto longo!!!\n"
      ]
     }
    ],
@@ -305,11 +342,11 @@
    ]
   },
   {
-   "source": [
-    "<h3><font color=#DAA520>print sep e end</font></h3>"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## print sep e end"
+   ]
   },
   {
    "cell_type": "code",
@@ -317,8 +354,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "t1 --> t2 --> t3 --> FIM\n"
      ]
@@ -340,8 +377,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Brasil-ganhou-5-titulos mundiais\n"
      ]
@@ -352,11 +389,43 @@
    ]
   },
   {
-   "source": [
-    "<h2><font color=#00BFFF>round()</font></h2>"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## Imprimindo com pprint( )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Cidade': 'Belo Horizonte',\n",
+      " 'Idade': 40,\n",
+      " 'nome': 'Livio'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\r\n",
+    "\r\n",
+    "# ! Imprimindo com pprint + width\r\n",
+    "\r\n",
+    "cliente = {'nome': 'Livio', 'Idade': 40, 'Cidade': 'Belo Horizonte'}\r\n",
+    "\r\n",
+    "pprint(cliente, width=40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **round()**"
+   ]
   },
   {
    "cell_type": "code",
@@ -364,14 +433,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3.14"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "execution_count": 14
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -379,5 +448,29 @@
     "round(3.14151922,2)"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
+  },
+  "orig_nbformat": 4
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
