add Multiplos excepts

--- a/Trabalhando com erros/exceções_erros.ipynb
+++ b/Trabalhando com erros/exceções_erros.ipynb
@@ -236,6 +236,45 @@
     "testa_divisão(2.5)\r\n",
     "testa_divisão(0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multiplos excepts\r\n",
+    "Multiplos excepts seguindo a hierarquia exmplificando o ZeroDivisionError\r\n",
+    "\r\n",
+    "Exception\r\n",
+    "\r\n",
+    "      +-- ArithmeticError\r\n",
+    "\r\n",
+    "      |    +-- ZeroDivisionError\r\n",
+    "\r\n",
+    "No exemplo abaixo temos um tratamente especifico de AttributeError, como o erro gerado foi de ZeroDivisionError colocamos abaixo outro except com tratamento geral, ou seja, Exception que é numero 1 na hierarquia."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tratamento geral de erro\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Provocando o erro ZeroDivisionError\r\n",
+    "try:\r\n",
+    "    1 / 0\r\n",
+    "except AttributeError:\r\n",
+    "    print('Erro de atributo tratado')\r\n",
+    "except Exception: \r\n",
+    "    print('Tratamento geral de erro')"
+   ]
   }
  ],
  "metadata": {
