Add Try, Except, else, Finally

--- a/Trabalhando com erros/exceções_erros.ipynb
+++ b/Trabalhando com erros/exceções_erros.ipynb
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **ZeroDivisionError**"
+    "# **Lendo Traceback**"
    ]
   },
   {
@@ -186,8 +186,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Lendo Traceback**\r\n",
-    "\r\n",
     "![Traceback](Traceback.png)\r\n",
     "\r\n",
     "O Traceback é um rastreio de informação.\r\n",
@@ -210,14 +208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O resultado da dvisão de 10 por 2.5 é 4.0\n",
+      "O resultado da divisão de 10 por 2.5 é 4.0\n",
       "Erro de divisão por zero tratado\n"
      ]
     }
@@ -229,7 +227,7 @@
     "def testa_divisão(divisor):\r\n",
     "    try:\r\n",
     "        resultado = dividir(10, divisor)\r\n",
-    "        print(f'O resultado da dvisão de 10 por {divisor} é {resultado}')\r\n",
+    "        print(f'O resultado da divisão de 10 por {divisor} é {resultado}')\r\n",
     "    except ZeroDivisionError:\r\n",
     "        print('Erro de divisão por zero tratado')\r\n",
     "\r\n",
@@ -241,39 +239,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multiplos excepts\r\n",
-    "Multiplos excepts seguindo a hierarquia exmplificando o ZeroDivisionError\r\n",
-    "\r\n",
-    "Exception\r\n",
-    "\r\n",
-    "      +-- ArithmeticError\r\n",
-    "\r\n",
-    "      |    +-- ZeroDivisionError\r\n",
-    "\r\n",
-    "No exemplo abaixo temos um tratamente especifico de AttributeError, como o erro gerado foi de ZeroDivisionError colocamos abaixo outro except com tratamento geral, ou seja, Exception que é numero 1 na hierarquia."
+    "# Try, Except, Finally"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tratamento geral de erro\n"
+      "Infelizmente tivemos um erro (<class 'ZeroDivisionError'>). causa (None)\n",
+      "Volte sempre\n"
      ]
     }
    ],
    "source": [
-    "# Provocando o erro ZeroDivisionError\r\n",
     "try:\r\n",
-    "    1 / 0\r\n",
-    "except AttributeError:\r\n",
-    "    print('Erro de atributo tratado')\r\n",
-    "except Exception: \r\n",
-    "    print('Tratamento geral de erro')"
+    "    a = 2\r\n",
+    "    b = 0\r\n",
+    "    c = a/b # ZeroDivisionError: division by zero\r\n",
+    "except Exception as x: # se quisermos detalhar o erro coloca Exception e cria uma variavel\r\n",
+    "    print(f'Infelizmente tivemos um erro ({x.__class__}). causa ({x.__cause__})') # se o erro acontecer da esta mensagem, se colocamos Exception poderemos mostrar a falha\r\n",
+    "except ZeroDivisionError: # podemos fazer as excessoes personalizadas\r\n",
+    "    print('Não é possivel dividir um numero por Zero!')\r\n",
+    "except (TypeError, ValueError): # podemos colocar mais de um except e dentro do except varias excessões\r\n",
+    "    print('Tivemos um problema com os tipos de dados que você digitou.')\r\n",
+    "else:\r\n",
+    "    print(c) # Se não acontecer o erro gera a mensagem correta\r\n",
+    "finally:\r\n",
+    "    print('Volte sempre') # finally sempre vai acontecer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Você não digitou um número!\n",
+      "Fim da execução!\n",
+      "Obrigado por digitar um número!\n",
+      "Fim da execução!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def digInt():\r\n",
+    "    while True:\r\n",
+    "        try:\r\n",
+    "            val = int(input(\"Digite um número: \"))\r\n",
+    "        except:\r\n",
+    "            print (\"Você não digitou um número!\")\r\n",
+    "            continue # continue ele pula as instruções abaixo e faz o loop para digitar novamente\r\n",
+    "        else:\r\n",
+    "            print (\"Obrigado por digitar um número!\")\r\n",
+    "            break # break para o loop\r\n",
+    "        finally:\r\n",
+    "            print(\"Fim da execução!\") \r\n",
+    "        print (val) \r\n",
+    "digInt()"
    ]
   }
  ],
