readline() Vs readlines()

--- a/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
+++ b/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
@@ -225,7 +225,9 @@
    "metadata": {},
    "source": [
     "# .read() e encoding=\"utf-8\"\r\n",
-    "O método read() somente funciona se abrir o arquivo como leitura ('r')"
+    "O método read() somente funciona se abrir o arquivo como leitura ('r')\r\n",
+    "\r\n",
+    "Ao abrir o arquivo com uma codificação diferente da que ele foi escrito, alguns caracteres podem apresentar erros, ou, em alguns sistemas operacionais, como no Mac OS, pode ser lançada uma exceção"
    ]
   },
   {
@@ -296,7 +298,9 @@
    "metadata": {},
    "source": [
     "# .read() e encoding=\"latin_1\"\r\n",
-    "O método read() somente funciona se abrir o arquivo como leitura ('r')"
+    "O método read() somente funciona se abrir o arquivo como leitura ('r')\r\n",
+    "\r\n",
+    "Ao abrir o arquivo com uma codificação diferente da que ele foi escrito, alguns caracteres podem apresentar erros, ou, em alguns sistemas operacionais, como no Mac OS, pode ser lançada uma exceção"
    ]
   },
   {
@@ -360,6 +364,66 @@
     "a.seek(0)\n",
     "print(a.readlines())\n",
     "a.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# readline() Vs readlines()\r\n",
+    "\r\n",
+    "readline() - ler somente uma linha\r\n",
+    "\r\n",
+    "readlines() - coloca todas as linhas em um lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,Guilherme,guilherme@guilherme.com.br\n",
+      "\n",
+      "conteudo = 88 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testando readline()\r\n",
+    "from sys import getsizeof\r\n",
+    "\r\n",
+    "with open('contatos.csv', 'r', encoding='latin_1') as a:\r\n",
+    "    conteudo = a.readline()\r\n",
+    "print(conteudo)\r\n",
+    "print(f'conteudo = {getsizeof(conteudo)} bytes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1,Guilherme,guilherme@guilherme.com.br\\n', '2,Elias,elias@elias.com.br\\n', '3,Gabriel,gabriel@gabriel.com.br\\n', '4,Anderson,anderson@anderson.com.br\\n', '5,Alex,alex@alex.com.br\\n', '6,Vini,vini@vini.com.br\\n', '7,Letícia,leticia@leticia.com.br\\n', '8,Giulia,giulia@giulia.com.br\\n', '9,Felipe,felipe@felipe.com.br\\n', '10,Luísa,luisa@luisa\\n']\n",
+      "conteudo = 184 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testando readlines()\r\n",
+    "from sys import getsizeof\r\n",
+    "\r\n",
+    "with open('contatos.csv', 'r', encoding='latin_1') as a:\r\n",
+    "    conteudo = a.readlines()\r\n",
+    "print(conteudo)\r\n",
+    "print(f'conteudo = {getsizeof(conteudo)} bytes')"
    ]
   },
   {
