Lendo arquivos linha a linha

--- a/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
+++ b/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
@@ -227,7 +227,10 @@
     "# .read() e encoding=\"utf-8\"\r\n",
     "O método read() somente funciona se abrir o arquivo como leitura ('r')\r\n",
     "\r\n",
-    "Ao abrir o arquivo com uma codificação diferente da que ele foi escrito, alguns caracteres podem apresentar erros, ou, em alguns sistemas operacionais, como no Mac OS, pode ser lançada uma exceção"
+    "Ao abrir o arquivo com uma codificação diferente da que ele foi escrito, alguns caracteres podem apresentar erros, ou, em alguns sistemas operacionais, como no Mac OS, pode ser lançada uma exceção\r\n",
+    "\r\n",
+    "Tipos de encoding:\r\n",
+    "https://docs.python.org/3/library/codecs.html#standard-encodings"
    ]
   },
   {
@@ -300,7 +303,10 @@
     "# .read() e encoding=\"latin_1\"\r\n",
     "O método read() somente funciona se abrir o arquivo como leitura ('r')\r\n",
     "\r\n",
-    "Ao abrir o arquivo com uma codificação diferente da que ele foi escrito, alguns caracteres podem apresentar erros, ou, em alguns sistemas operacionais, como no Mac OS, pode ser lançada uma exceção"
+    "Ao abrir o arquivo com uma codificação diferente da que ele foi escrito, alguns caracteres podem apresentar erros, ou, em alguns sistemas operacionais, como no Mac OS, pode ser lançada uma exceção\r\n",
+    "\r\n",
+    "Tipos de encoding:\r\n",
+    "https://docs.python.org/3/library/codecs.html#standard-encodings"
    ]
   },
   {
@@ -637,6 +643,53 @@
     "\n",
     "with open(\"python-logo2.png\", \"wb\") as imagem2:\n",
     "    imagem2.write(data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lendo arquivos linha a linha e protegendo uso de memoria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imprimindo linha 0 | 88-bytes\n",
+      " 1,Guilherme,guilherme@guilherme.com.br\n",
+      "Imprimindo linha 1 | 76-bytes\n",
+      " 2,Elias,elias@elias.com.br\n",
+      "Imprimindo linha 2 | 82-bytes\n",
+      " 3,Gabriel,gabriel@gabriel.com.br\n",
+      "Imprimindo linha 3 | 85-bytes\n",
+      " 4,Anderson,anderson@anderson.com.br\n",
+      "Imprimindo linha 4 | 73-bytes\n",
+      " 5,Alex,alex@alex.com.br\n",
+      "Imprimindo linha 5 | 73-bytes\n",
+      " 6,Vini,vini@vini.com.br\n",
+      "Imprimindo linha 6 | 106-bytes\n",
+      " 7,Letícia,leticia@leticia.com.br\n",
+      "Imprimindo linha 7 | 79-bytes\n",
+      " 8,Giulia,giulia@giulia.com.br\n",
+      "Imprimindo linha 8 | 79-bytes\n",
+      " 9,Felipe,felipe@felipe.com.br\n",
+      "Imprimindo linha 9 | 94-bytes\n",
+      " 10,Luísa,luisa@luisa\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sys import getsizeof\r\n",
+    "\r\n",
+    "with open('contatos.csv', 'r', encoding='latin_1') as a:\r\n",
+    "    for numero, linha in enumerate(a):\r\n",
+    "        print(f'Imprimindo linha {numero} | {getsizeof(linha)}-bytes\\n {linha}', end='')"
    ]
   }
  ],
