add método .flush()

--- a/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
+++ b/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
@@ -565,6 +565,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# .flush()\r\n",
+    "Uma característica de quando a gente está trabalhando com escrita de arquivo no Python. A gente precisa fechar o arquivo para indicar que a gente não está mais trabalhando com ele. Somente após fechar é que as edições serão salvas, mas e se não podermos fechar o arquivo?\r\n",
+    "\r\n",
+    "Com método **flush**, os dados vão ser escritos, porém o arquivo vai continuar aberto."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arquivos_contatos = open('contatos.csv', mode='a', encoding='latin_1')\r\n",
+    "\r\n",
+    "novo_contato = '11,Livio,livio@livio.com.br\\n'\r\n",
+    "\r\n",
+    "arquivos_contatos.write(novo_contato)\r\n",
+    "\r\n",
+    "arquivos_contatos.flush()\r\n",
+    "\r\n",
+    "arquivos_contatos.close()\r\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# .with open\r\n",
     "O método close() é executado automaticamente"
    ]
