--- a/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
+++ b/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
@@ -718,6 +718,130 @@
     "    for numero, linha in enumerate(a):\r\n",
     "        print(f'Imprimindo linha {numero} | {getsizeof(linha)}-bytes\\n {linha}', end='')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Erros comuns ao tentar abrir um arquivo.\r\n",
+    "\r\n",
+    "1. **FileNotFoundError** - Não encontrar o arquivo no local especificado.\r\n",
+    "\r\n",
+    "1. **PermissionError** - Não tem permissão de escrita/criação no diretorio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## try + finally"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1,Guilherme,guilherme@guilherme.com.br\\n', '2,Elias,elias@elias.com.br\\n', '3,Gabriel,gabriel@gabriel.com.br\\n', '4,Anderson,anderson@anderson.com.br\\n', '5,Alex,alex@alex.com.br\\n', '6,Vini,vini@vini.com.br\\n', '7,Letï¿½cia,leticia@leticia.com.br\\n', '8,Giulia,giulia@giulia.com.br\\n', '9,Felipe,felipe@felipe.com.br\\n', '10,Luï¿½sa,luisa@luisa\\n', '11,Livio,livio@livio.com.br\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tratando erros com try:\r\n",
+    "try:\r\n",
+    "    arquivo = open('contatos.csv', mode='a+', encoding='latin_1')\r\n",
+    "    # Em mode='a' o arquivo abre na ultima linha, colocamos seek(0) para retornar a 1ª linha\r\n",
+    "    #  assim o readlines funcionar.\r\n",
+    "    arquivo.seek(0)\r\n",
+    "    conteudo = arquivo.readlines()\r\n",
+    "    print(conteudo)\r\n",
+    "\r\n",
+    "# finally será executando sempre, é comum colocarmos este tratamento para fechar o arquivo, \r\n",
+    "#  apos o uso. Assim liberando o mesmo para outras pessoas.\r\n",
+    "finally:\r\n",
+    "    arquivo.close()\r\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## simulando FileNotFoundError\r\n",
+    "\r\n",
+    "* Modificando o nome do arquivo para um arquivo que não existe.\r\n",
+    "* Abrindo em mode='r', pois em w e a se não existir o arquivo o Python cria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'arquivo_nao_existe.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-13c66ac0315f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0marquivo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'arquivo_nao_existe.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'r'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'latin_1'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0marquivo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mseek\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mconteudo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marquivo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconteudo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'arquivo_nao_existe.csv'"
+     ]
+    }
+   ],
+   "source": [
+    "try:\r\n",
+    "    arquivo = open('arquivo_nao_existe.csv', mode='r', encoding='latin_1')\r\n",
+    "    arquivo.seek(0)\r\n",
+    "    conteudo = arquivo.readlines()\r\n",
+    "    print(conteudo)\r\n",
+    "\r\n",
+    "finally:\r\n",
+    "    arquivo.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solução com except FileNotFoundError:\r\n",
+    "\r\n",
+    "**Agora nosso script não quebra caso não encontre o arquivo**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arquivo não encontrado\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\r\n",
+    "    arquivo = open('arquivo_nao_existe.csv', mode='r', encoding='latin_1')\r\n",
+    "    arquivo.seek(0)\r\n",
+    "    conteudo = arquivo.readlines()\r\n",
+    "    print(conteudo)\r\n",
+    "\r\n",
+    "except FileNotFoundError:\r\n",
+    "    print('Arquivo não encontrado')\r\n",
+    "    \r\n",
+    "except PermissionError:\r\n",
+    "    print('Sem permissão de escrita')\r\n",
+    "\r\n",
+    "finally:\r\n",
+    "    arquivo.close()"
+   ]
   }
  ],
  "metadata": {
