Substituindo finally por with e comprehensions

--- a/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
+++ b/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -700,14 +700,16 @@
       " 5,Alex,alex@alex.com.br\n",
       "Imprimindo linha 5 | 73-bytes\n",
       " 6,Vini,vini@vini.com.br\n",
-      "Imprimindo linha 6 | 106-bytes\n",
-      " 7,Letícia,leticia@leticia.com.br\n",
+      "Imprimindo linha 6 | 108-bytes\n",
+      " 7,Letï¿½cia,leticia@leticia.com.br\n",
       "Imprimindo linha 7 | 79-bytes\n",
       " 8,Giulia,giulia@giulia.com.br\n",
       "Imprimindo linha 8 | 79-bytes\n",
       " 9,Felipe,felipe@felipe.com.br\n",
-      "Imprimindo linha 9 | 94-bytes\n",
-      " 10,Luísa,luisa@luisa\n"
+      "Imprimindo linha 9 | 96-bytes\n",
+      " 10,Luï¿½sa,luisa@luisa\n",
+      "Imprimindo linha 10 | 77-bytes\n",
+      " 11,Livio,livio@livio.com.br\n"
      ]
     }
    ],
@@ -815,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -841,6 +843,51 @@
     "\r\n",
     "finally:\r\n",
     "    arquivo.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Substituindo finally por with\r\n",
+    "\r\n",
+    "* with fecha automaticamente um arquivo\r\n",
+    "* usando Lists Comprehensions simples para imprimir linha a linha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,Guilherme,guilherme@guilherme.com.br\n",
+      "2,Elias,elias@elias.com.br\n",
+      "3,Gabriel,gabriel@gabriel.com.br\n",
+      "4,Anderson,anderson@anderson.com.br\n",
+      "5,Alex,alex@alex.com.br\n",
+      "6,Vini,vini@vini.com.br\n",
+      "7,Letï¿½cia,leticia@leticia.com.br\n",
+      "8,Giulia,giulia@giulia.com.br\n",
+      "9,Felipe,felipe@felipe.com.br\n",
+      "10,Luï¿½sa,luisa@luisa\n",
+      "11,Livio,livio@livio.com.br\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\r\n",
+    "    with open('contatos.csv', mode='r', encoding='latin_1') as arquivo:\r\n",
+    "        [print(linha, end='') for linha in arquivo.readlines()]\r\n",
+    "\r\n",
+    "except FileNotFoundError:\r\n",
+    "    print('Arquivo não encontrado')\r\n",
+    "    \r\n",
+    "except PermissionError:\r\n",
+    "    print('Sem permissão de escrita')\r\n"
    ]
   }
  ],
